// Copyright 2019 SolarNetwork Foundation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package solarnetwork.esi.domain;

option cc_enable_arenas = true;
option java_multiple_files = true;
option java_outer_classname = "DerResourceCharacteristicsProto";
option java_package = "net.solarnetwork.esi.domain";
option objc_class_prefix = "ESI";

import "solarnetwork/esi/domain/der_route.proto";
import "solarnetwork/esi/domain/duration_range.proto";

/**
 * Characteristics of the resources provided by a DER facility.
 */
message DerResourceCharacteristics {

  // The routing info.
  DerRoute route = 1;

  // The maximum load this resource can demand, in W.
  uint64 load_power_max = 2;

  // The expected power factor of load, between -1..1.
  float load_power_factor = 3;

  // The maximum supply resource can offer, in W.
  uint64 supply_power_max = 4;

  // The expected power factor of supply, between -1..1.
  float supply_power_factor = 5;

  // The theoretical storage capacity of this resource, in Wh.
  uint64 storage_energy_capacity = 6;

  // The expected minimum/maximum response time to start/finish executing load or supply changes.
  DurationRange reponse_time = 7;

}
